<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E9F0C7"
    tools:context=".MainActivity">

    <!-- Barra superior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guasap"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:textStyle="bold">
        </TextView>

        <ImageButton
            android:id="@+id/imgbtnPuntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_more_vert"
            android:background="@android:color/transparent">
        </ImageButton>
    </LinearLayout>

    <!-- Barra de búsqueda -->
    <SearchView
        android:id="@+id/svChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:queryHint="Buscar chats"
        android:iconifiedByDefault="false"
        android:background="@drawable/search_background">
    </SearchView>

    <!-- Botones de filtros -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btnTodos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/todos"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:backgroundTint="#65735C"
            android:layout_marginStart="10dp">
        </Button>
        <Button
            android:id="@+id/btnNoleidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_le_dos"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:singleLine="true"
            android:backgroundTint="#65735C"
            android:layout_marginHorizontal="5dp">
        </Button>
        <Button
            android:id="@+id/btnFavoritos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:backgroundTint="#65735C"
            android:text="@string/favoritos">
        </Button>
        <Button
            android:id="@+id/btnGrupos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:textSize="11sp"
            android:backgroundTint="#65735C"
            android:layout_marginEnd="10dp"
            android:text="@string/grupos">
        </Button>
    </LinearLayout>

    <!-- Lista de chats scrolleable -->
    <ListView
        android:id="@+id/lvChats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <!-- Barra inferior fija: Iconos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnChats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_chat">
        </ImageButton>

        <ImageButton
            android:id="@+id/btnEstados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/estado">
        </ImageButton>

        <ImageButton
            android:id="@+id/btnLlamadas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/telefono">
        </ImageButton>
    </LinearLayout>

    <!-- Barra inferior fija: Textos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chats"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/novedades"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/llamadas"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

</LinearLayout>