<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E9F0C7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novedades"
            android:textSize="30dp"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:layout_weight="1">
        </TextView>

        <ImageButton
            android:id="@+id/imgbtnPuntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_more_vert"
            android:background="@android:color/transparent">
        </ImageButton>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estados"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp">
            </TextView>

            <HorizontalScrollView
                android:id="@+id/hsvEstados"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/llContenedorEstados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/canales"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">
                </TextView>

                <Button
                    android:id="@+id/btnExplorarCanales"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/explorar"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/botones">
                </Button>

            </LinearLayout>

            <ListView
                android:id="@+id/lvCanales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true">
            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Busca canales para seguir"
                    android:textStyle="bold"
                    android:layout_margin="10dp">
                </TextView>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/btnDesplegar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="centerCrop"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_flecha_arriba"
                    android:background="@color/botones"
                    app:shapeAppearanceOverlay="@style/Circulo">
                </com.google.android.material.imageview.ShapeableImageView>
            </LinearLayout>

            <ListView
                android:id="@+id/lvCanalesSeguir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true">
            </ListView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCanalesMas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/botones"
                app:icon="@drawable/mas"
                app:iconGravity="textStart"
                app:iconTint="@color/black"
                app:iconSize="15dp"
                android:text="Explorar más"
                android:textColor="@color/black">
            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnChats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_chat">
        </ImageButton>

        <ImageButton
            android:id="@+id/btnEstados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/estado">
        </ImageButton>

        <ImageButton
            android:id="@+id/btnLlamadas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/telefono">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chats"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/novedades"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/llamadas"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

</LinearLayout>